# unipr-clt-fisica

./: .gitattributes  .gitignore  .pdm-python  Cargo.toml  README.md  pixi.toml  pyproject.toml  rotolamento.opju
.github/workflows/: tex.yml
altro/: 123.ipynb  fantasanremo.py
geometria/: det118.tex  t231121.tex  tutorato.tex
lab1/: rotolamento.opju
lab1/gravity/: caduta dei gravi.csv
lab1/hooke/: data2.csv
lab1/r01-density/: data.py
lab1/r02-hooke/: data2.py
lab1/r03-gravity/: data.py  gravity.opju
lab1/r04-random/: Cargo.toml  random.opju  relazione.tex
lab1/r05-torsion/: relazione.tex  torsione.opju  torsione2.opju
lab1/r06-water/: cal_Teb.opju  cal_Teb_old.opju  cal_longrun.opju  cal_regressioni.opju  relazione.tex
lab1/r07-pendulum/: data.ipynb  pendolo-fisico.opju  raw-data.opju  regressione.csv  relazione.tex
lab1/r08-rolling/: data.ipynb  relazione.tex  rotolamento.opju
lab1/r09-glicerine/: cit1.bib  cit1.ris  cit2.bib  cit2.ris  data.csv  data.ipynb  grande.csv  massa_A.txt  massa_B.txt  massa_C.txt  media.csv  piccola.csv  piccolo.xml  relazione.bib  relazione.blg  relazione.tex
lab1/r1-density/: data.py
lab1/r10-thermocouple/: data.ipynb  relazione.tex  termocoppia.opju
lab1/r11-liquid-nitrogen/: calorimetro.opju
lab1/r11-nitrogen/: calorimetro tabelle aggiornate.opju  calorimetro tabelle definitive.opju  calorimetro tabelle nuove.opju  calorimetro tabelle orribili.opju  calorimetro tabelle.opju  calorimetro.opju  data.ipynb  (+1 more)
prog/: .gitignore  eq2.cpp  foglio10.cpp  foglio11.cpp  foglio9.cpp  prog1.cpp
src/: main.rs
(+495 files in other folders)
