[project]
name = ""
version = ""
description = ""
authors = [
    {name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"},
]
dependencies = [
    "typing-extensions>=4.8.0",
    "matplotlib>=3.8.2",
    "rberga06-phylab @ git+https://github.com/rberga06/pyphylab",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[tool.ruff]
line-length = 120
ignore = [
    "F403",  # import *
    "F405",  # undefined symbols
]
